--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>JS + CSS Clock</title>
 </head>
+
 <body>
-
-
-    <div class="clock">
-      <div class="clock-face">
-        <div class="hand hour-hand"></div>
-        <div class="hand min-hand"></div>
-        <div class="hand second-hand"></div>
-      </div>
+  <div class="clock">
+    <div class="clock-face">
+      <div class="hand hour-hand"></div>
+      <div class="hand min-hand"></div>
+      <div class="hand second-hand"></div>
+      <div class="hand center-dot"></div>
     </div>
-
-
+  </div>
+<audio data-key="72" src="ride.wav"></audio>
   <style>
     html {
-      background:#018DED url(http://unsplash.it/1500/1000?image=881&blur=50);
-      background-size:cover;
-      font-family:'helvetica neue';
+      background: #018DED url(http://unsplash.it/1500/1000?image=881&blur=50);
+      background-size: cover;
+      font-family: 'helvetica neue';
       text-align: center;
       font-size: 10px;
     }
@@ -28,8 +28,8 @@
     body {
       margin: 0;
       font-size: 2rem;
-      display:flex;
-      flex:1;
+      display: flex;
+      flex: 1;
       min-height: 100vh;
       align-items: center;
     }
@@ -37,38 +37,77 @@
     .clock {
       width: 30rem;
       height: 30rem;
-      border:20px solid white;
-      border-radius:50%;
-      margin:50px auto;
+      border: 20px solid white;
+      border-radius: 50%;
+      margin: 50px auto;
       position: relative;
-      padding:2rem;
-      box-shadow:
-        0 0 0 4px rgba(0,0,0,0.1),
-        inset 0 0 0 3px #EFEFEF,
-        inset 0 0 10px black,
-        0 0 10px rgba(0,0,0,0.2);
+      padding: 2rem;
+      box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.1),
+      inset 0 0 0 3px #EFEFEF,
+      inset 0 0 10px black,
+      0 0 10px rgba(0, 0, 0, 0.2);
     }
 
     .clock-face {
       position: relative;
       width: 100%;
       height: 100%;
-      transform: translateY(-3px); /* account for the height of the clock hands */
+      transform: translateY(-3px);
+      /* account for the height of the clock hands */
     }
 
     .hand {
-      width:50%;
-      height:6px;
-      background:black;
+      width: 50%;
+      height: 6px;
+      background: black;
+      border-radius: 10px;
       position: absolute;
-      top:50%;
+      top: 51%;
+      transform: rotate(90deg);
+      transform-origin: 100%;
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
     }
 
+    .center-dot {
+      width: 20px;
+      height: 20px;
+      left: 43%;
+      background-color: #fff;
+      border-radius: 50%;
+      z-index: 999;
+    }
   </style>
 
   <script>
+    function showTime() {
 
+      // selectors for hands
+      var secHand = document.querySelector('.second-hand'),
+        minHand = document.querySelector('.min-hand'),
+        hourHand = document.querySelector('.hour-hand');
+
+      var audio = document.querySelector(`audio[data-key="72"]`);
+  
+      var date = new Date();
+
+      var sec = date.getSeconds(),
+        min = date.getMinutes(),
+        hour = date.getHours();
+
+      var degSec = sec * 6 + 90;
+      var degMin = (min * 6) + (sec / 10) + 90;
+      var degHour = ((360 * hour) / 12) + (min * 360 / (12 * 60)) + 90;
+      secHand.style.transform = `rotate(${degSec}deg)`;
+      audio.play();
+      audio.currentTime = 0;
+      minHand.style.transform = `rotate(${degMin}deg)`;
+      hourHand.style.transform = `rotate(${degHour}deg)`;
+
+    }
+    setInterval(showTime, 1000);
 
   </script>
 </body>
+
 </html>
