--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -77,6 +77,21 @@
       border-radius: 50%;
       z-index: 999;
     }
+
+    .second-hand {
+      height: 2px;
+      background-color: red;
+    }
+
+    .hour-hand {
+      width: 30%;
+      left: 20%;
+      background-color: green;
+    }
+
+    .min-hand {
+      background-color: yellow;
+    }
   </style>
 
   <script>
