--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -26,15 +26,30 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+
+    function isOlderThan19(element) {
+      const year = new Date().getFullYear();
+      return year - element.year >= 19 ? true: false;
+    }
+    
+    console.log(people.some(isOlderThan19));
     // Array.prototype.every() // is everyone 19 or older?
+
+    var isEveryOneAdult = people.every((person) => ((new Date()).getFullYear() - person.year >= 19 ? true: false));
+
+    console.log(isEveryOneAdult);
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+    const id = comments.find((comment) => (comment.id === 823423));
+    console.log(id);
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+    const index = comments.findIndex((comment) => (comment.id === 823423));
+    console.log(index);
 
   </script>
 </body>
