--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -65,6 +65,7 @@
 
     function playSound(event) {
       console.log(event);
+      // ES6 template literal
       var audio = document.querySelector(`audio[data-key="${event.keyCode}"]`);
       var key = document.querySelector(`div[data-key="${event.keyCode}"]`);
       if(audio && key) {
