--- a/08 - Fun with HTML5 Canvas/index-START.html
+++ b/08 - Fun with HTML5 Canvas/index-START.html
@@ -5,8 +5,19 @@
   <title>HTML5 Canvas</title>
 </head>
 <body>
+<canvas id="c" height="200"	width="200"></canvas>
 <canvas id="draw" width="800" height="800"></canvas>
 <script>
+	const c = document.querySelector('#c');
+	const cctx = c.getContext('2d');
+
+	const img = new Image();
+	img.src = 'abstract-q-c-200-200-8.jpg';
+
+	img.onload = function() {
+		console.log('image loaded');
+		cctx.drawImage(img, 0,0,c.width, c.height);
+	};
 </script>
 
 <style>
